SERVER-20604 fix getMoreRequest.toBSON