src/mongo/db/query/getmore_request.cpp
@@ -189,6 +189,10 @@ BSONObj GetMoreRequest::toBSON() const {
         builder.append(kTermField, *term);
     }
 
+    if (lastKnownCommittedOpTime) {
+        lastKnownCommittedOpTime->append(&builder, kLastKnownCommittedOpTimeField);
+    }
+
     return builder.obj();
 }
 
